# dataset-studio

./: .gitignore  LICENSE  README.md  dataset-studio.py  pyproject.toml
docs/: ADAPTERS_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_AND_STRUCTURE.md  ARTICLE_TODO.md  CLI_REFERENCE.md  DOCUMENTATION_TODO.md  LEGACY_ARCHIVE.md  MODEL_REGISTRY.md  TROUBLESHOOTING.md  TUTORIAL_E2E.md  USER_MANUAL.md  scientific_article_draft.md
registry/: README.md  aliases.yaml  fish_dataset_archive_report.json  fish_runs_archive_report.json  migration_report.json  models.yaml
registry/datasets/: ds-d00-train6-external.yaml  ds-d01-128.yaml  ds-d02-605.yaml  ds-d03-fixed-test.yaml  ds-d03-fixed-valtest.yaml  ds-d03-variable.yaml  ds-d04-r260719001.yaml  release_canaleta_pvc_260717_export_selected.yaml  release_canaleta_pvc_260717_project-2-at-2026-07-22-23-38-0124d6e7.yaml  release_canaleta_pvc_260717_project-2-at-2026-07-23-09-50-91cd7484.yaml
registry/runs/: dataset_260719001__yolo26n_fixed_valtest_seed43_best__20260720_012436_571432.yaml  release_canaleta_pvc_260717_export_selected2.yaml  stat_e100_seed_42.yaml  stat_e100_seed_43.yaml  stat_e100_seed_44.yaml  stat_e100_seed_45.yaml  stat_e100_seed_46.yaml  stat_fixed_e150_b16_seed_42.yaml  stat_fixed_e150_b16_seed_43.yaml  stat_fixed_e150_b16_seed_44.yaml  stat_fixed_e150_b16_seed_45.yaml  stat_fixed_e150_b16_seed_46.yaml  stat_fixed_valtest_yolo26n_base_e150_b16_seed_42.yaml  stat_fixed_valtest_yolo26n_base_e150_b16_seed_43.yaml  stat_fixed_valtest_yolo26n_base_e150_b16_seed_44.yaml  train6.yaml  (+12 more)
tests/: __init__.py  test_sanity.py
(+55 files in other folders)
