[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataset-studio"
version = "0.1.0"
description = "Ferramenta autônoma para organização, revisão e materialização de releases de datasets para visão computacional"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Dataset Studio Contributors" }
]
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
yolo = [
    "ultralytics>=8.0.0",
]
cuda = [
    "torch>=2.7.0; sys_platform == 'win32'",
    "torchvision>=0.22.0; sys_platform == 'win32'",
]
label-studio = [
    "label-studio>=1.12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
dataset-studio = "dataset_studio.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
